GUI で遊べるようにした（そのうちリファクタする）

--- a/FNN_MNIST_20160704/FNN_MNIST_20160704/MainWindow.xaml
+++ b/FNN_MNIST_20160704/FNN_MNIST_20160704/MainWindow.xaml
@@ -10,16 +10,44 @@
         <TextBlock x:Name="mnistLabelTextBlock"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Top"
-                   Margin="0,50,0,0"/>
-        <Image x:Name="mnistPixelsImage"
-               Width="100"
-               Height="100"/>
-        <Button x:Name="runButton"
-                Content="Run"
-                Margin="0,0,0,50"
+                   Margin="0,30,0,0"/>
+        <TextBlock x:Name="estimatedTextBlock"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   Margin="0,60,0,0"/>
+        <Border Width="100"
+                Height="100"
+                Background="Gray">
+            <Image x:Name="mnistPixelsImage"
+                   Stretch="Fill"/>
+        </Border>
+        <Button x:Name="previousButton"
+                Content="previous"
+                Margin="0,0,100,60"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Bottom"
                 Width="75"
-                Click="clickRun"/>
+                Click="clickPrevious"/>
+        <Button x:Name="nextButton"
+                Content="next"
+                Margin="100,0,0,60"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Width="75"
+                Click="clickNext"/>
+        <Button x:Name="loadButton"
+                Content="load"
+                Margin="0,0,100,20"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Width="75"
+                Click="clickLoad"/>
+        <Button x:Name="testButton"
+                Content="test"
+                Margin="100,0,0,20"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Width="75"
+                Click="clickTest"/>
     </Grid>
 </Window>
